--- a/index.html
+++ b/index.html
@@ -1,1 +1,351 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documento HTML Detalhado com CSS e JavaScript</title>
+    <style>
+        /* Reset básico para consistência */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        /* Estilos para o cabeçalho */
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.2em;
+        }
+
+        /* Estilos para a navegação */
+        nav {
+            background-color: #333;
+            padding: 10px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            background-color: #555;
+        }
+
+        /* Estilos para a seção principal */
+        main {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        section h2 {
+            color: #4CAF50;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 10px;
+            margin-bottom: 15px;
+        }
+
+        /* Estilos para botões */
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 1em;
+            color: white;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            margin: 5px;
+        }
+
+        .btn:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
+        }
+
+        .btn-secondary {
+            background-color: #2196F3;
+        }
+
+        .btn-secondary:hover {
+            background-color: #1e87d9;
+        }
+
+        .btn-danger {
+            background-color: #f44336;
+        }
+
+        .btn-danger:hover {
+            background-color: #da190b;
+        }
+
+        /* Estilos para o formulário */
+        form {
+            display: flex;
+            flex-direction: column;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        input[type="text"],
+        input[type="number"] {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        /* Estilos para a lista de tarefas */
+        #todo-list {
+            list-style: none;
+        }
+
+        #todo-list li {
+            background-color: #f9f9f9;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        #todo-list li button {
+            background-color: #f44336;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Estilos para o contador */
+        #counter {
+            font-size: 2em;
+            text-align: center;
+            margin: 20px 0;
+            color: #4CAF50;
+        }
+
+        /* Estilos para o modal */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Animações */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .fade-in {
+            animation: fadeIn 1s ease-in;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Bem-vindo ao Meu Documento Interativo</h1>
+        <p>Este é um exemplo detalhado de HTML, CSS e JavaScript com botões, formulários, modais e mais!</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#secao1">Seção 1</a></li>
+            <li><a href="#secao2">Seção 2</a></li>
+            <li><a href="#secao3">Seção 3</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="secao1">
+            <h2>Seção 1: Contador Interativo</h2>
+            <p>Clique nos botões para aumentar ou diminuir o contador.</p>
+            <div id="counter">0</div>
+            <button class="btn" onclick="incrementCounter()">Aumentar</button>
+            <button class="btn btn-secondary" onclick="decrementCounter()">Diminuir</button>
+            <button class="btn btn-danger" onclick="resetCounter()">Resetar</button>
+        </section>
+
+        <section id="secao2">
+            <h2>Seção 2: Lista de Tarefas</h2>
+            <p>Adicione tarefas à lista usando o formulário abaixo.</p>
+            <form id="todo-form">
+                <input type="text" id="todo-input" placeholder="Digite uma tarefa..." required>
+                <button class="btn" type="submit">Adicionar Tarefa</button>
+            </form>
+            <ul id="todo-list"></ul>
+        </section>
+
+        <section id="secao3">
+            <h2>Seção 3: Modal de Informações</h2>
+            <p>Clique no botão para abrir um modal com mais detalhes.</p>
+            <button class="btn" id="openModalBtn">Abrir Modal</button>
+        </section>
+    </main>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content fade-in">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Informações Adicionais</h2>
+            <p>Este modal foi criado com CSS e JavaScript puro. Ele aparece com uma animação de fade-in e pode ser fechado clicando no X ou fora do modal.</p>
+            <p>Você pode adicionar mais conteúdo aqui, como imagens, links ou formulários.</p>
+        </div>
+    </div>
+
+    <script>
+        // Variáveis globais
+        let counter = 0;
+        const counterElement = document.getElementById('counter');
+        const todoForm = document.getElementById('todo-form');
+        const todoInput = document.getElementById('todo-input');
+        const todoList = document.getElementById('todo-list');
+        const modal = document.getElementById('myModal');
+        const openModalBtn = document.getElementById('openModalBtn');
+
+        // Funções para o contador
+        function incrementCounter() {
+            counter++;
+            updateCounter();
+        }
+
+        function decrementCounter() {
+            counter--;
+            updateCounter();
+        }
+
+        function resetCounter() {
+            counter = 0;
+            updateCounter();
+        }
+
+        function updateCounter() {
+            counterElement.textContent = counter;
+            counterElement.classList.add('fade-in');
+            setTimeout(() => {
+                counterElement.classList.remove('fade-in');
+            }, 1000);
+        }
+
+        // Funções para a lista de tarefas
+        todoForm.addEventListener('submit', function(event) {
+            event.preventDefault();
+            if (todoInput.value.trim() === '') return;
+
+            const li = document.createElement('li');
+            li.textContent = todoInput.value;
+            const deleteBtn = document.createElement('button');
+            deleteBtn.textContent = 'Excluir';
+            deleteBtn.onclick = function() {
+                todoList.removeChild(li);
+            };
+            li.appendChild(deleteBtn);
+            todoList.appendChild(li);
+            todoInput.value = '';
+        });
+
+        // Funções para o modal
+        function openModal() {
+            modal.style.display = 'block';
+        }
+
+        function closeModal() {
+            modal.style.display = 'none';
+        }
+
+        openModalBtn.onclick = openModal;
+
+        // Fechar o modal clicando fora dele
+        window.onclick = function(event) {
+            if (event.target === modal) {
+                closeModal();
+            }
+        };
+    </script>
+</body>
+</html>
