--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Conteúdo Protegido por Senha Data</title>
+<title>Para Genifer</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-  /* Background gradient with dark colors and blue-purple */
   body, html {
     margin: 0; padding: 0; height: 100%;
     font-family: 'Montserrat', sans-serif;
@@ -16,7 +15,6 @@
     overflow-x: hidden;
   }
 
-  /* Particle canvas full screen behind everything */
   #particles-js {
     position: fixed;
     width: 100%;
@@ -25,7 +23,6 @@
     top: 0; left: 0;
   }
 
-  /* Main container centered */
   .container {
     position: relative;
     z-index: 10;
@@ -40,7 +37,6 @@
     word-wrap: break-word;
   }
 
-  /* Text content area that grows/shrinks with text */
   #content {
     font-size: 1.1rem;
     line-height: 1.5;
@@ -48,7 +44,6 @@
     min-height: 80px;
   }
 
-  /* Input container */
   .input-area {
     margin: 2rem auto 1.5rem auto;
     max-width: 320px;
@@ -63,7 +58,6 @@
     text-shadow: 0 0 5px #6b6fff;
   }
 
-  /* Input with dark background and blue-purple border */
   #passwordInput {
     width: 100%;
     font-size: 1.3rem;
@@ -83,7 +77,6 @@
     box-shadow: 0 0 8px #a3a9f7;
   }
 
-  /* Hint text */
   #hint {
     margin-top: 0.5rem;
     font-size: 0.9rem;
@@ -92,7 +85,6 @@
     text-shadow: 0 0 3px #4b4f7f;
   }
 
-  /* Button style */
   button {
     display: block;
     margin: 1.5rem auto 0 auto;
@@ -113,7 +105,6 @@
     outline: none;
   }
 
-  /* Hidden content area */
   #protectedContent {
     margin-top: 2rem;
     background: linear-gradient(145deg, #2e2e4d, #1a1a2e);
@@ -126,7 +117,16 @@
     white-space: pre-wrap;
   }
 
-  /* Link button inside protected content */
+  .message-section {
+    margin-bottom: 2rem;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid #4a4a8a;
+  }
+
+  .message-section:last-child {
+    border-bottom: none;
+  }
+
   #linkButton {
     margin-top: 1.8rem;
     background: linear-gradient(135deg, #4a4aff, #7a4aff);
@@ -146,7 +146,6 @@
     outline: none;
   }
 
-  /* Responsive adjustments */
   @media (max-width: 480px) {
     .container {
       margin: 3vh 1rem 3vh 1rem;
@@ -166,7 +165,6 @@
 </head>
 <body>
 
-<!-- Particle background container -->
 <div id="particles-js"></div>
 
 <div class="container" aria-live="polite">
@@ -178,61 +176,126 @@
   </div>
 
   <div id="protectedContent" style="display:none;" tabindex="0" aria-live="polite" aria-label="Conteúdo protegido">
-    <div id="content"></div>
-    <button id="linkButton" aria-label="Abrir link">Abrir Link</button>
+    <div id="content">
+      <div class="message-section">
+        Oi, Genifer. Escrevo isso com o coração pesado e lágrimas nos olhos, mas com a esperança de que você possa me ouvir, mesmo depois de todo esse tempo.
+      </div>
+
+      <div class="message-section">
+        Lembro como se fosse ontem da primeira vez que te vi na escola. Você era tão quietinha, calada, parecia ter medo de falar com as pessoas. Mas quando eu me aproximei e começamos a conversar, descobri a pessoa mais incrível que já conheci.
+      </div>
+
+      <div class="message-section">
+        Nossa amizade foi se construindo e você se tornou a pessoa mais importante pra mim. Tudo pra mim era você. Eu me sentia completo quando estávamos juntos, e cada momento ao seu lado era especial.
+      </div>
+
+      <div class="message-section">
+        Quando pedi você em namoro no dia 22 de junho de 2022, foi um dos dias mais felizes da minha vida. Respondia com tanto orgulho quando alguém me perguntava quem era minha namorada. Você era meu maior motivo de felicidade.
+      </div>
+
+      <div class="message-section">
+        Nossa conexão era algo maravilhoso. As conversas intermináveis, os abraços mais gostosos do mundo, os passeios que a gente aproveitou tanto, as festas que frequentávamos juntos... Cada segundo ao seu lado era precioso pra mim.
+      </div>
+
+      <div class="message-section">
+        Eu me afastei de muita gente só pra ter você comigo. Cuidava de você como se fosse o mais importante do mundo, e daria minha vida pela sua sem pensar duas vezes. O amor que sentia por você me fazia sentir que poderia superar qualquer coisa.
+      </div>
+
+      <div class="message-section">
+        A distância da fazenda que você morava era difícil, mas cada momento que passávamos juntos valia por todos os dias de espera. Até faltava na escola só pra te ver, porque sua presença era mais importante que qualquer outra coisa.
+      </div>
+
+      <div class="message-section">
+        No início de 2023, comecei a faculdade e me senti sobrecarregado com a pressão e dificuldade. No dia 3 de fevereiro, tomei a pior decisão da minha vida: terminei com você. Eu era imaturo e não sabia lidar com tudo aquilo.
+      </div>
+
+      <div class="message-section">
+        Só depois de um tempo descobri que você estava passando pelo momento mais difícil da sua vida. vocês tinham voltado pra cidade e estavam passando por algumas dificuldades. E eu não estava lá por você.
+      </div>
+
+      <div class="message-section">
+        Quando soube que o conselho tutelar havia levado você e seus irmãos para um abrigo, eu fiquei tão preocupado. Imaginar você passando por tudo isso sozinha me dói até hoje.
+      </div>
+
+      <div class="message-section">
+        Não houve um único dia desde que nos separamos que eu não pensei em você. Não consigo ouvir certas músicas sem lembrar de nós. As luzes da cidade à noite me trazem memórias de quando te levava pra casa.
+      </div>
+
+      <div class="message-section">
+        Até hoje guardo a primeira pulseira que você fez, aquela que eu mesmo te ensinei a fazer. Ela significa muito pra mim, assim como cada momento que vivemos juntos.
+      </div>
+
+      <div class="message-section">
+        Hoje trabalho no mesmo lugar que você e às vezes te vejo. Fico tão feliz em saber que você está tendo um bom rumo na vida, as vezes te vejo na faculdade realizando seus sonhos. Mas não tenho coragem de me aproximar por pura vergonha do que fiz.
+      </div>
+
+      <div class="message-section">
+        Sei que você namora agora, e espero do fundo do meu coração que ele te trate como você merece - com todo amor, respeito e cuidado que você sempre mereceu.
+      </div>
+
+      <div class="message-section">
+        Lembro daquele último dia que nos encontramos na praça em frente à sua casa. Ficamos em silêncio, mas eu queria tanto ter dito tudo que estou dizendo agora. Queria ter te abraçado pelo menos uma ultima vez.
+      </div>
+
+      <div class="message-section">eu quero repetir isso denovo mas, desde aquele dia que eu te deixei, não teve um unico dia que não pensei em você. eu sei que parece mentira mas não é. as vezes posso estar ouvindo algumas musicas que eu ouvia na época que te conheci que eu fico lembrando de você. tenho dificuldade pra ver as luzes da cidade de longe e não lembrar de você porque isso me faz lembrar quando eu te levava embora pra cidade a noite e conseguia ver aquele monte de luzes e hoje em dia quando vejo eu lembro de você </div>
+
+      <div class="message-section">não sei se você tem duvidas ou algo do tipo porque naquela época as pessoas inventavam tanta coisa sobre mim. mas sobre eu ter ficado com outras pessoas ou algo do tipo, eu nunca te troquei por outra pessoa. nunca tive outra pessoa além de você.</div>
+
+      
+
+      <div class="message-section">
+        Se um dia você quiser ser minha amiga novamente, eu quero muito isso, mas se não quiser eu te entendo porque depois de tudo isso você tem motivos. Mesmo depois de tudo, você ainda significa muito para mim. Só queria que você soubesse o quanto me importo e sempre me importei.
+      </div>
+
+      <div class="message-section">
+        Peço desculpas por ter te deixado no momento que mais precisava de mim. Eu era muito novo e não sabia de muito, mas isso não justifica minha ausência quando você mais precisou, e sei o quanto isso foi ruim porque minha conciencia pesa até hoje.
+      </div>
+
+      <div class="message-section">
+        Se um dia você puder me perdoar, isso significaria muito para mim. Mesmo que nunca possamos voltar ao que éramos, só de saber que você não me guarda rancor já aliviaria esse peso que carrego há tanto tempo.
+      </div>
+
+      <div class="message-section">
+        Obrigado por ter sido a pessoa mais importante da minha vida. Obrigado por todos os momentos felizes que vivemos juntos. E, principalmente, obrigado por ter me permitido te amar.
+      </div>
+
+      <div class="message-section">
+        eu vou deixar aqui em baixo um jeito de vc me responder se quiser. pode falar o que sentir vontade de verdade. eu fiz isso tudo pra te ouvir de verdade. saber se vc está precisando de algo, nem que seja qualquer coisa se eu conseguir eu te ajudo. mas o mais importante pra mim é que você me perdoe por tudo.
+        <br><br>
+        
+      </div>
+    </div>
+    <button id="linkButton" aria-label="Abrir link">Quero te responder</button>
   </div>
 </div>
 
 <script>
-  // Texto que você quer mostrar (coloque aqui o texto que deseja)
-  const textoProtegido = `Olá! Este é o conteúdo protegido que só pode ser visto após digitar a senha correta.
-  
-Este container cresce ou diminui conforme a quantidade de texto que você colocar aqui no código.
-  
-Você pode colocar quantas linhas quiser, e o container vai ajustar seu tamanho automaticamente.
-
-Aproveite o conteúdo!`;
-
-  // Link que o botão deve abrir
-  const linkDestino = "https://www.exemplo.com";
-
   const senhaCorreta = "22/06/2022";
+  const linkDestino = "https://docs.google.com/forms/d/e/1FAIpQLSfDMuShBIDlcUFBA7qWbG-vs8Z1uiQ_4njx4V1LCaAE2O7sug/viewform?usp=header"; 
 
   const input = document.getElementById('passwordInput');
   const checkBtn = document.getElementById('checkBtn');
   const protectedContent = document.getElementById('protectedContent');
-  const contentDiv = document.getElementById('content');
-  const linkButton = document.getElementById('linkButton');
   const inputArea = document.getElementById('inputArea');
+  const linkButton = document.getElementById('linkButton');
 
-  // Função para formatar automaticamente a data com barras enquanto o usuário digita só números
   input.addEventListener('input', e => {
     let val = input.value;
-    // Remove tudo que não for número
     val = val.replace(/\D/g, '');
-
-    // Limita a 8 números (ddmmyyyy)
     if(val.length > 8) val = val.slice(0,8);
-
-    // Insere as barras automaticamente
     if(val.length > 4) {
       val = val.replace(/^(\d{2})(\d{2})(\d{1,4}).*/, '$1/$2/$3');
     } else if(val.length > 2) {
       val = val.replace(/^(\d{2})(\d{1,2}).*/, '$1/$2');
     }
-
     input.value = val;
   });
 
-  // Função para verificar senha
   checkBtn.addEventListener('click', () => {
     const val = input.value.trim();
     if(val === senhaCorreta) {
-      // Mostrar conteúdo protegido
-      contentDiv.textContent = textoProtegido;
       protectedContent.style.display = 'block';
       inputArea.style.display = 'none';
-      // Focar no conteúdo para acessibilidade
       protectedContent.focus();
     } else {
       alert('Senha incorreta. Tente novamente.');
@@ -240,12 +303,10 @@ Aproveite o conteúdo!`;
     }
   });
 
-  // Botão para abrir o link
   linkButton.addEventListener('click', () => {
     window.open(linkDestino, '_blank', 'noopener');
   });
 
-  // Acessibilidade: permitir Enter no input para disparar o botão
   input.addEventListener('keydown', e => {
     if(e.key === 'Enter') {
       checkBtn.click();
@@ -253,10 +314,8 @@ Aproveite o conteúdo!`;
   });
 </script>
 
-<!-- Particles.js library and config -->
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  /* ParticlesJS config for subtle blue-purple particles */
   particlesJS('particles-js',
     {
       "particles": {
