--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
   <div class="input-area" id="inputArea" aria-label="Área de entrada de senha">
     <label for="passwordInput">Digite a senha (data):</label>
     <input type="text" id="passwordInput" inputmode="numeric" maxlength="10" aria-describedby="hint" aria-required="true" autocomplete="off" placeholder="__/__/____" />
-    <div id="hint" aria-live="polite">Essa data um dia já foi importante em 2022.</div>
+    <div id="hint" aria-live="polite">Essa data um dia já foi importante em 2022.
+      não precisa colocar / então so digite os números
+    </div>
     <button id="checkBtn" aria-label="Verificar senha">Verificar</button>
   </div>
 
