--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <label for="passwordInput">Digite a senha (data):</label>
     <input type="text" id="passwordInput" inputmode="numeric" maxlength="10" aria-describedby="hint" aria-required="true" autocomplete="off" placeholder="__/__/____" />
     <div id="hint" aria-live="polite">Essa data um dia já foi importante em 2022.
-      não precisa colocar / então so digite os números
+      digite os números
     </div>
     <button id="checkBtn" aria-label="Verificar senha">Verificar</button>
   </div>
