--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
 
       <div class="message-section">
-        Quando pedi você em namoro no dia 22 de junho de 2022, foi um dos dias mais felizes da minha vida. Respondia com tanto orgulho quando alguém me perguntava quem era minha namorada. Você era meu maior motivo de felicidade.
+        Quando pedi você em namoro no dia 17 e você me disse sim em uma quarta-feira 22 de junho de 2022, foi um dos dias mais felizes da minha vida. Respondia com tanto orgulho quando alguém me perguntava quem era minha namorada. Você era meu maior motivo de felicidade.
       </div>
 
       <div class="message-section">
